@@ -1,4 +1,4 @@
-lilv (0.19.0) unstable;
+lilv (0.19.2) unstable;
 
   * Don't load files multiple times if they are listed as rdfs:seeAlso for
     several plugins
@@ -12,10 +12,11 @@ lilv (0.19.0) unstable;
     (thanks Filipe Coelho)
   * Improved/working lv2_apply.py to apply plugin to a .wav
     (thanks Joe Button)
+  * Add lilv_world_unload_bundle() and lilv_world_unload_resource()
   * Fix several minor memory leaks
   * Improve test coverage
 
- -- David Robillard <d@drobilla.net>  Sat, 12 Jul 2014 22:42:56 -0400
+ -- David Robillard <d@drobilla.net>  Tue, 15 Jul 2014 15:14:36 -0400
 
 lilv (0.18.0) stable;
 
